[gd_scene load_steps=2 format=3 uid="uid://dvd6ysg6qyrj2"]

[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.gd" id="1_ah38f"]

[node name="GBeginPoint" type="Node2D"]
script = ExtResource("1_ah38f")

[node name="ControlBegin" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 1

[node name="Line" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = 1
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.631373, 0, 0.156863, 1)

[node name="Label" type="Label" parent="."]
offset_left = -13.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 20

[connection signal="gui_input" from="ControlBegin" to="." method="_on_gui_input"]
